--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head> <script src="https://assets.adobedtm.com/e72b4113c11a/8a1f7e93d46e/launch-e6b9da7e8b2c-development.min.js" async></script>
     <title>My Test Page</title>
   </head>
   <body>
